sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: reassignment to val
	fini=true
            ^AlgBubbleSort1:9: error: reassignment to val
			fini=false
                            ^