sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
val fini:Boolean=true
do {
	fini=true
	for (i <- 0 to getNombreValeurs-2) {
		if (getValeur(i) > getValeur(i+1)) {
			echange(i,i+1)
			fini=false
		}
	}
} while (fini == false)
}
